--- a/Amanda.csproj
+++ b/Amanda.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -18,5 +18,13 @@
   <ItemGroup>
     <Folder Include="Trainings\" />
   </ItemGroup>
+
+   <ItemGroup>
+	   <Content Include="Trainings\*.json" CopyToOutputDirectory="PreserveNewest" />
+   </ItemGroup>
+
+   <ItemGroup>
+	   <Content Include="LearnedData\*.json" CopyToOutputDirectory="PreserveNewest" />
+   </ItemGroup>
 
 </Project>
